--- a/index.html
+++ b/index.html
@@ -36,13 +36,14 @@
 	</head>
 	<body>
 <!-- - - - - - - 8<- - - - - - cut here - - - - - 8<- - - - - - - -->
-		<script type="text/javascript" src="pano2vr_player.js?ts=82413358">
+		<script type="text/javascript" src="pano2vr_player.js?ts=38351114">
 		</script>
-		<script type="text/javascript" src="skin.js?ts=82413358">
+		<script type="text/javascript" src="skin.js?ts=38351114">
 		</script>
 		<link rel="stylesheet" href="3rdparty/leaflet/leaflet.css"/>
 		<script src="https://www.youtube.com/iframe_api"></script>
 		<script src="https://player.vimeo.com/api/player.js"></script>
+		<script src="https://maps.googleapis.com/maps/api/js?v=3&key="></script>
 		<script src="3rdparty/leaflet/leaflet.js"></script>
 		<script src="webxr/webxr-polyfill.min.js"></script>
 		<div id="container" style="width:100%;height:100%;overflow:hidden;">
@@ -94,12 +95,12 @@
 			pano=new pano2vrPlayer("container");
 			pano.startNode = startNode;
 			pano.startView = startView;
-			pano.setQueryParameter("ts=82413358")
+			pano.setQueryParameter("ts=38351114")
 			// add the skin object
 			skin=new pano2vrSkin(pano);
 			// load the configuration
 			window.addEventListener("load", function() {
-				pano.readConfigUrlAsync("pano.xml?ts=82413358");
+				pano.readConfigUrlAsync("pano.xml?ts=38351114");
 			});
 			if (window.navigator.userAgent.match(/Safari/i)) {
 				// fix for white borders, rotation on iPhone
